# Learning_task

doc/: URDF.md  buff.md
rm_buff/: CMakeLists.txt  package.xml  rm_buff_controller_plugins.xml
rm_buff/config/: controllers.yaml
rm_buff/include/: buff_controller.h
rm_buff/src/: buff_controller.cpp
rm_buff/test/: test.launch
rm_buff/urdf/: rm_buff.urdf.xacro
robot_description/: package.xml
robot_description/config/: car.rviz
robot_description/launch/: robot_description.launch
robot_description/test/: test.launch
robot_description/urdf/: car.urdf.xacro
src/hw/: CMakeLists.txt  package.xml
src/hw/config/: buff.yaml
src/hw/launch/: buff.launch
src/rm_buff/: CMakeLists.txt  package.xml
src/rm_buff/cfg/: buff.cfg
src/rm_buff/config/: controllers.yaml  rviz.rviz
src/rm_buff/include/: buff_controller.h
src/rm_buff/src/: buff_controller.cpp
src/rm_buff/test/: test.launch
src/rm_buff/urdf/: rm_buff.urdf.xacro
src/robot_description/: CMakeLists.txt
src/robot_description/config/: controllers.yaml
src/robot_description/launch/: robot_description.launch
