<?xml version="1.0"?>
<package format="2">
    <name>rm_buff</name>
    <version>0.1.9</version>
    <description>RoboMaster robot description files</description>
    <maintainer email="liaoqiayuan@gmail.com">Qiayuan Liao</maintainer>
    <license>BSD</license>
    <author email="liaoqiayuan@gmail.com">Qiayuan Liao</author>

    <!-- buildtool_depend: dependencies of the build process -->
    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>controller_interface</depend>
    <depend>hardware_interface</depend>
    <depend>pluginlib</depend>
    <depend>control_toolbox</depend>
    <depend>urdf</depend>
    <depend>xacro</depend>
    <depend>gazebo_ros_control</depend>


    <export>
        <controller_interface plugin="${prefix}/rm_buff_controller_plugins.xml"/>
    </export>
</package>
